@@ -1,9 +1,9 @@
 mod_name=PortableCrafting
 package_group=com.gr8pefish.portablecrafting
-mod_version=1.0
+mod_version=1.1
 mc_version=1.8.9
 forge_version=latest
 
 mappings_version=snapshot_20160109
 
-jei_version=2.16.0.74
+jei_version=2.20.0.96
